tests/bad_dataflow_2.c
//@FAIL
int main() {
    int x;
    return x;
}